grammar/MiniJavaParser.js
// Generated from MiniJava.g4 by ANTLR 4.5.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var MiniJavaListener = require('./MiniJavaListener').MiniJavaListener;
var MiniJavaVisitor = require('./MiniJavaVisitor').MiniJavaVisitor;

var grammarFileName = "MiniJava.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ 'null', "'class'", "'extends'", "'{'", "'}'", "'public'", 
                     "';'", "'static'", "'void'", "'main'", "'('", "'String'", 
                     "'['", "']'", "')'", "','", "'boolean'", "'int'", "'if'", 
                     "'else'", "'while'", "'System'", "'.'", "'out'", "'println'", 
                     "'return'", "'='", "'new'", "'-'", "'!'", "'*'", "'/'", 
                     "'%'", "'+'", "'<='", "'>='", "'>'", "'<'", "'=='", 
                     "'!='", "'&'", "'|'", "'&&'", "'||'", "'this'", "'null'", 
                     "'false'", "'true'" ];

var symbolicNames = [ 'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', "INTEGER", 
                      "IDENTIFIER", "LINE_COMMENT", "COMMENT", "WS" ];

var ruleNames =  [ "translationUnit", "classDeclaration", "classMember", 
                   "field", "mainMethod", "method", "parameters", "parameter", 
                   "type", "statement", "block", "ifStatement", "whileStatement", 
                   "emptyStatement", "printStatement", "expressionStatement", 
                   "returnStatement", "blockStatement", "localVariableDeclarationStatement", 
                   "expression", "primaryExpression", "expressionList" ];

function MiniJavaParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

MiniJavaParser.prototype = Object.create(antlr4.Parser.prototype);
MiniJavaParser.prototype.constructor = MiniJavaParser;

Object.defineProperty(MiniJavaParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

MiniJavaParser.EOF = antlr4.Token.EOF;
MiniJavaParser.T__0 = 1;
MiniJavaParser.T__1 = 2;
MiniJavaParser.T__2 = 3;
MiniJavaParser.T__3 = 4;
MiniJavaParser.T__4 = 5;
MiniJavaParser.T__5 = 6;
MiniJavaParser.T__6 = 7;
MiniJavaParser.T__7 = 8;
MiniJavaParser.T__8 = 9;
MiniJavaParser.T__9 = 10;
MiniJavaParser.T__10 = 11;
MiniJavaParser.T__11 = 12;
MiniJavaParser.T__12 = 13;
MiniJavaParser.T__13 = 14;
MiniJavaParser.T__14 = 15;
MiniJavaParser.T__15 = 16;
MiniJavaParser.T__16 = 17;
MiniJavaParser.T__17 = 18;
MiniJavaParser.T__18 = 19;
MiniJavaParser.T__19 = 20;
MiniJavaParser.T__20 = 21;
MiniJavaParser.T__21 = 22;
MiniJavaParser.T__22 = 23;
MiniJavaParser.T__23 = 24;
MiniJavaParser.T__24 = 25;
MiniJavaParser.T__25 = 26;
MiniJavaParser.T__26 = 27;
MiniJavaParser.T__27 = 28;
MiniJavaParser.T__28 = 29;
MiniJavaParser.T__29 = 30;
MiniJavaParser.T__30 = 31;
MiniJavaParser.T__31 = 32;
MiniJavaParser.T__32 = 33;
MiniJavaParser.T__33 = 34;
MiniJavaParser.T__34 = 35;
MiniJavaParser.T__35 = 36;
MiniJavaParser.T__36 = 37;
MiniJavaParser.T__37 = 38;
MiniJavaParser.T__38 = 39;
MiniJavaParser.T__39 = 40;
MiniJavaParser.T__40 = 41;
MiniJavaParser.T__41 = 42;
MiniJavaParser.T__42 = 43;
MiniJavaParser.T__43 = 44;
MiniJavaParser.T__44 = 45;
MiniJavaParser.T__45 = 46;
MiniJavaParser.T__46 = 47;
MiniJavaParser.INTEGER = 48;
MiniJavaParser.IDENTIFIER = 49;
MiniJavaParser.LINE_COMMENT = 50;
MiniJavaParser.COMMENT = 51;
MiniJavaParser.WS = 52;

MiniJavaParser.RULE_translationUnit = 0;
MiniJavaParser.RULE_classDeclaration = 1;
MiniJavaParser.RULE_classMember = 2;
MiniJavaParser.RULE_field = 3;
MiniJavaParser.RULE_mainMethod = 4;
MiniJavaParser.RULE_method = 5;
MiniJavaParser.RULE_parameters = 6;
MiniJavaParser.RULE_parameter = 7;
MiniJavaParser.RULE_type = 8;
MiniJavaParser.RULE_statement = 9;
MiniJavaParser.RULE_block = 10;
MiniJavaParser.RULE_ifStatement = 11;
MiniJavaParser.RULE_whileStatement = 12;
MiniJavaParser.RULE_emptyStatement = 13;
MiniJavaParser.RULE_printStatement = 14;
MiniJavaParser.RULE_expressionStatement = 15;
MiniJavaParser.RULE_returnStatement = 16;
MiniJavaParser.RULE_blockStatement = 17;
MiniJavaParser.RULE_localVariableDeclarationStatement = 18;
MiniJavaParser.RULE_expression = 19;
MiniJavaParser.RULE_primaryExpression = 20;
MiniJavaParser.RULE_expressionList = 21;

function TranslationUnitContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MiniJavaParser.RULE_translationUnit;
    return this;
}

TranslationUnitContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
TranslationUnitContext.prototype.constructor = TranslationUnitContext;

TranslationUnitContext.prototype.classDeclaration = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ClassDeclarationContext);
    } else {
        return this.getTypedRuleContext(ClassDeclarationContext,i);
    }
};

TranslationUnitContext.prototype.enterRule = function(listener) {
    if(listener instanceof MiniJavaListener ) {
        listener.enterTranslationUnit(this);
	}
};

TranslationUnitContext.prototype.exitRule = function(listener) {
    if(listener instanceof MiniJavaListener ) {
        listener.exitTranslationUnit(this);
	}
};

TranslationUnitContext.prototype.accept = function(visitor) {
    if ( visitor instanceof MiniJavaVisitor ) {
        return visitor.visitTranslationUnit(this);
    } else {
        return visitor.visitChildren(this);
    }
};




MiniJavaParser.TranslationUnitContext = TranslationUnitContext;

MiniJavaParser.prototype.translationUnit = function() {

    var localctx = new TranslationUnitContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, MiniJavaParser.RULE_translationUnit);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 47;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===MiniJavaParser.T__0) {
            this.state = 44;
            this.classDeclaration();
            this.state = 49;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ClassDeclarationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MiniJavaParser.RULE_classDeclaration;
    return this;
}

ClassDeclarationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ClassDeclarationContext.prototype.constructor = ClassDeclarationContext;

ClassDeclarationContext.prototype.IDENTIFIER = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(MiniJavaParser.IDENTIFIER);
    } else {
        return this.getToken(MiniJavaParser.IDENTIFIER, i);
    }
};


ClassDeclarationContext.prototype.classMember = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ClassMemberContext);
    } else {
        return this.getTypedRuleContext(ClassMemberContext,i);
    }
};

ClassDeclarationContext.prototype.enterRule = function(listener) {
    if(listener instanceof MiniJavaListener ) {
        listener.enterClassDeclaration(this);
	}
};

ClassDeclarationContext.prototype.exitRule = function(listener) {
    if(listener instanceof MiniJavaListener ) {
        listener.exitClassDeclaration(this);
	}
};

ClassDeclarationContext.prototype.accept = function(visitor) {
    if ( visitor instanceof MiniJavaVisitor ) {
        return visitor.visitClassDeclaration(this);
    } else {
        return visitor.visitChildren(this);
    }
};




MiniJavaParser.ClassDeclarationContext = ClassDeclarationContext;

MiniJavaParser.prototype.classDeclaration = function() {

    var localctx = new ClassDeclarationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, MiniJavaParser.RULE_classDeclaration);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 50;
        this.match(MiniJavaParser.T__0);
        this.state = 51;
        this.match(MiniJavaParser.IDENTIFIER);
        this.state = 54;
        _la = this._input.LA(1);
        if(_la===MiniJavaParser.T__1) {
            this.state = 52;
            this.match(MiniJavaParser.T__1);
            this.state = 53;
            this.match(MiniJavaParser.IDENTIFIER);
        }

        this.state = 56;
        this.match(MiniJavaParser.T__2);
        this.state = 60;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===MiniJavaParser.T__4) {
            this.state = 57;
            this.classMember();
            this.state = 62;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 63;
        this.match(MiniJavaParser.T__3);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ClassMemberContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MiniJavaParser.RULE_classMember;
    return this;
}

ClassMemberContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ClassMemberContext.prototype.constructor = ClassMemberContext;

ClassMemberContext.prototype.field = function() {
    return this.getTypedRuleContext(FieldContext,0);
};

ClassMemberContext.prototype.mainMethod = function() {
    return this.getTypedRuleContext(MainMethodContext,0);
};

ClassMemberContext.prototype.method = function() {
    return this.getTypedRuleContext(MethodContext,0);
};

ClassMemberContext.prototype.enterRule = function(listener) {
    if(listener instanceof MiniJavaListener ) {
        listener.enterClassMember(this);
	}
};

ClassMemberContext.prototype.exitRule = function(listener) {
    if(listener instanceof MiniJavaListener ) {
        listener.exitClassMember(this);
	}
};

ClassMemberContext.prototype.accept = function(visitor) {
    if ( visitor instanceof MiniJavaVisitor ) {
        return visitor.visitClassMember(this);
    } else {
        return visitor.visitChildren(this);
    }
};




MiniJavaParser.ClassMemberContext = ClassMemberContext;

MiniJavaParser.prototype.classMember = function() {

    var localctx = new ClassMemberContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, MiniJavaParser.RULE_classMember);
    try {
        this.state = 68;
        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 65;
            this.field();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 66;
            this.mainMethod();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 67;
            this.method();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function FieldContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MiniJavaParser.RULE_field;
    return this;
}

FieldContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FieldContext.prototype.constructor = FieldContext;

FieldContext.prototype.type = function() {
    return this.getTypedRuleContext(TypeContext,0);
};

FieldContext.prototype.IDENTIFIER = function() {
    return this.getToken(MiniJavaParser.IDENTIFIER, 0);
};

FieldContext.prototype.enterRule = function(listener) {
    if(listener instanceof MiniJavaListener ) {
        listener.enterField(this);
	}
};

FieldContext.prototype.exitRule = function(listener) {
    if(listener instanceof MiniJavaListener ) {
        listener.exitField(this);
	}
};

FieldContext.prototype.accept = function(visitor) {
    if ( visitor instanceof MiniJavaVisitor ) {
        return visitor.visitField(this);
    } else {
        return visitor.visitChildren(this);
    }
};




MiniJavaParser.FieldContext = FieldContext;

MiniJavaParser.prototype.field = function() {

    var localctx = new FieldContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, MiniJavaParser.RULE_field);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 70;
        this.match(MiniJavaParser.T__4);
        this.state = 71;
        this.type();
        this.state = 72;
        this.match(MiniJavaParser.IDENTIFIER);
        this.state = 73;
        this.match(MiniJavaParser.T__5);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function MainMethodContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MiniJavaParser.RULE_mainMethod;
    return this;
}

MainMethodContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MainMethodContext.prototype.constructor = MainMethodContext;

MainMethodContext.prototype.IDENTIFIER = function() {
    return this.getToken(MiniJavaParser.IDENTIFIER, 0);
};

MainMethodContext.prototype.blockStatement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(BlockStatementContext);
    } else {
        return this.getTypedRuleContext(BlockStatementContext,i);
    }
};

MainMethodContext.prototype.enterRule = function(listener) {
    if(listener instanceof MiniJavaListener ) {
        listener.enterMainMethod(this);
	}
};

MainMethodContext.prototype.exitRule = function(listener) {
    if(listener instanceof MiniJavaListener ) {
        listener.exitMainMethod(this);
	}
};

MainMethodContext.prototype.accept = function(visitor) {
    if ( visitor instanceof MiniJavaVisitor ) {
        return visitor.visitMainMethod(this);
    } else {
        return visitor.visitChildren(this);
    }
};




MiniJavaParser.MainMethodContext = MainMethodContext;

MiniJavaParser.prototype.mainMethod = function() {

    var localctx = new MainMethodContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, MiniJavaParser.RULE_mainMethod);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 75;
        this.match(MiniJavaParser.T__4);
        this.state = 76;
        this.match(MiniJavaParser.T__6);
        this.state = 77;
        this.match(MiniJavaParser.T__7);
        this.state = 78;
        this.match(MiniJavaParser.T__8);
        this.state = 79;
        this.match(MiniJavaParser.T__9);
        this.state = 80;
        this.match(MiniJavaParser.T__10);
        this.state = 81;
        this.match(MiniJavaParser.T__11);
        this.state = 82;
        this.match(MiniJavaParser.T__12);
        this.state = 83;
        this.match(MiniJavaParser.IDENTIFIER);
        this.state = 84;
        this.match(MiniJavaParser.T__13);
        this.state = 85;
        this.match(MiniJavaParser.T__2);
        this.state = 89;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << MiniJavaParser.T__2) | (1 << MiniJavaParser.T__5) | (1 << MiniJavaParser.T__7) | (1 << MiniJavaParser.T__9) | (1 << MiniJavaParser.T__15) | (1 << MiniJavaParser.T__16) | (1 << MiniJavaParser.T__17) | (1 << MiniJavaParser.T__19) | (1 << MiniJavaParser.T__20) | (1 << MiniJavaParser.T__24) | (1 << MiniJavaParser.T__26) | (1 << MiniJavaParser.T__27) | (1 << MiniJavaParser.T__28))) !== 0) || ((((_la - 44)) & ~0x1f) == 0 && ((1 << (_la - 44)) & ((1 << (MiniJavaParser.T__43 - 44)) | (1 << (MiniJavaParser.T__44 - 44)) | (1 << (MiniJavaParser.T__45 - 44)) | (1 << (MiniJavaParser.T__46 - 44)) | (1 << (MiniJavaParser.INTEGER - 44)) | (1 << (MiniJavaParser.IDENTIFIER - 44)))) !== 0)) {
            this.state = 86;
            this.blockStatement();
            this.state = 91;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 92;
        this.match(MiniJavaParser.T__3);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function MethodContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MiniJavaParser.RULE_method;
    return this;
}

MethodContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MethodContext.prototype.constructor = MethodContext;

MethodContext.prototype.type = function() {
    return this.getTypedRuleContext(TypeContext,0);
};

MethodContext.prototype.IDENTIFIER = function() {
    return this.getToken(MiniJavaParser.IDENTIFIER, 0);
};

MethodContext.prototype.parameters = function() {
    return this.getTypedRuleContext(ParametersContext,0);
};

MethodContext.prototype.blockStatement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(BlockStatementContext);
    } else {
        return this.getTypedRuleContext(BlockStatementContext,i);
    }
};

MethodContext.prototype.enterRule = function(listener) {
    if(listener instanceof MiniJavaListener ) {
        listener.enterMethod(this);
	}
};

MethodContext.prototype.exitRule = function(listener) {
    if(listener instanceof MiniJavaListener ) {
        listener.exitMethod(this);
	}
};

MethodContext.prototype.accept = function(visitor) {
    if ( visitor instanceof MiniJavaVisitor ) {
        return visitor.visitMethod(this);
    } else {
        return visitor.visitChildren(this);
    }
};




MiniJavaParser.MethodContext = MethodContext;

MiniJavaParser.prototype.method = function() {

    var localctx = new MethodContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, MiniJavaParser.RULE_method);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 94;
        this.match(MiniJavaParser.T__4);
        this.state = 95;
        this.type();
        this.state = 96;
        this.match(MiniJavaParser.IDENTIFIER);
        this.state = 97;
        this.match(MiniJavaParser.T__9);
        this.state = 99;
        _la = this._input.LA(1);
        if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << MiniJavaParser.T__7) | (1 << MiniJavaParser.T__15) | (1 << MiniJavaParser.T__16))) !== 0) || _la===MiniJavaParser.IDENTIFIER) {
            this.state = 98;
            this.parameters();
        }

        this.state = 101;
        this.match(MiniJavaParser.T__13);
        this.state = 102;
        this.match(MiniJavaParser.T__2);
        this.state = 106;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << MiniJavaParser.T__2) | (1 << MiniJavaParser.T__5) | (1 << MiniJavaParser.T__7) | (1 << MiniJavaParser.T__9) | (1 << MiniJavaParser.T__15) | (1 << MiniJavaParser.T__16) | (1 << MiniJavaParser.T__17) | (1 << MiniJavaParser.T__19) | (1 << MiniJavaParser.T__20) | (1 << MiniJavaParser.T__24) | (1 << MiniJavaParser.T__26) | (1 << MiniJavaParser.T__27) | (1 << MiniJavaParser.T__28))) !== 0) || ((((_la - 44)) & ~0x1f) == 0 && ((1 << (_la - 44)) & ((1 << (MiniJavaParser.T__43 - 44)) | (1 << (MiniJavaParser.T__44 - 44)) | (1 << (MiniJavaParser.T__45 - 44)) | (1 << (MiniJavaParser.T__46 - 44)) | (1 << (MiniJavaParser.INTEGER - 44)) | (1 << (MiniJavaParser.IDENTIFIER - 44)))) !== 0)) {
            this.state = 103;
            this.blockStatement();
            this.state = 108;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 109;
        this.match(MiniJavaParser.T__3);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ParametersContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MiniJavaParser.RULE_parameters;
    return this;
}

ParametersContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ParametersContext.prototype.constructor = ParametersContext;

ParametersContext.prototype.parameter = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ParameterContext);
    } else {
        return this.getTypedRuleContext(ParameterContext,i);
    }
};

ParametersContext.prototype.enterRule = function(listener) {
    if(listener instanceof MiniJavaListener ) {
        listener.enterParameters(this);
	}
};

ParametersContext.prototype.exitRule = function(listener) {
    if(listener instanceof MiniJavaListener ) {
        listener.exitParameters(this);
	}
};

ParametersContext.prototype.accept = function(visitor) {
    if ( visitor instanceof MiniJavaVisitor ) {
        return visitor.visitParameters(this);
    } else {
        return visitor.visitChildren(this);
    }
};




MiniJavaParser.ParametersContext = ParametersContext;

MiniJavaParser.prototype.parameters = function() {

    var localctx = new ParametersContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, MiniJavaParser.RULE_parameters);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 111;
        this.parameter();
        this.state = 116;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===MiniJavaParser.T__14) {
            this.state = 112;
            this.match(MiniJavaParser.T__14);
            this.state = 113;
            this.parameter();
            this.state = 118;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ParameterContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MiniJavaParser.RULE_parameter;
    return this;
}

ParameterContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ParameterContext.prototype.constructor = ParameterContext;

ParameterContext.prototype.type = function() {
    return this.getTypedRuleContext(TypeContext,0);
};

ParameterContext.prototype.IDENTIFIER = function() {
    return this.getToken(MiniJavaParser.IDENTIFIER, 0);
};

ParameterContext.prototype.enterRule = function(listener) {
    if(listener instanceof MiniJavaListener ) {
        listener.enterParameter(this);
	}
};

ParameterContext.prototype.exitRule = function(listener) {
    if(listener instanceof MiniJavaListener ) {
        listener.exitParameter(this);
	}
};

ParameterContext.prototype.accept = function(visitor) {
    if ( visitor instanceof MiniJavaVisitor ) {
        return visitor.visitParameter(this);
    } else {
        return visitor.visitChildren(this);
    }
};




MiniJavaParser.ParameterContext = ParameterContext;

MiniJavaParser.prototype.parameter = function() {

    var localctx = new ParameterContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, MiniJavaParser.RULE_parameter);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 119;
        this.type();
        this.state = 120;
        this.match(MiniJavaParser.IDENTIFIER);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function TypeContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MiniJavaParser.RULE_type;
    return this;
}

TypeContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
TypeContext.prototype.constructor = TypeContext;

TypeContext.prototype.IDENTIFIER = function() {
    return this.getToken(MiniJavaParser.IDENTIFIER, 0);
};

TypeContext.prototype.enterRule = function(listener) {
    if(listener instanceof MiniJavaListener ) {
        listener.enterType(this);
	}
};

TypeContext.prototype.exitRule = function(listener) {
    if(listener instanceof MiniJavaListener ) {
        listener.exitType(this);
	}
};

TypeContext.prototype.accept = function(visitor) {
    if ( visitor instanceof MiniJavaVisitor ) {
        return visitor.visitType(this);
    } else {
        return visitor.visitChildren(this);
    }
};




MiniJavaParser.TypeContext = TypeContext;

MiniJavaParser.prototype.type = function() {

    var localctx = new TypeContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, MiniJavaParser.RULE_type);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 122;
        _la = this._input.LA(1);
        if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << MiniJavaParser.T__7) | (1 << MiniJavaParser.T__15) | (1 << MiniJavaParser.T__16))) !== 0) || _la===MiniJavaParser.IDENTIFIER)) {
        this._errHandler.recoverInline(this);
        }
        else {
            this.consume();
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};
